Refactoring: app name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.minimalisticpriceconverter">
+    package="com.minimalisticapps.priceconverter">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,10 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MinimalisticPriceConverter">
         <activity
-            android:name=".AboutActivity"
+            android:name="com.minimalisticapps.priceconverter.AboutActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.minimalisticapps.priceconverter.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.MinimalisticPriceConverter.NoActionBar">
             <intent-filter>
