--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,5 +82,5 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.24.5-alpha"
-
+    implementation("org.burnoutcrew.composereorderable:reorderable:0.7.0")
 }
