--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.minimalisticapps.priceconverter"
         minSdk 21
         targetSdk 32
-        versionCode 2
-        versionName "2.0-beta"
+        versionCode 3
+        versionName "2.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
